workin dev init